Add repository field

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: marker_motion
 description: A flutter package that smoothly animates Google Maps markers between two positions
 version: 0.1.0
-homepage:
+repository: https://github.com/chaosinfernohq/marker_motion
 
 environment:
   sdk: ^3.7.0
